update swagger, updateDelete user
